.infrastructure/k8s/manifests/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ## This service will be of type NodePort
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
  selector:
    ## Select any PODS (not deployments) with the label
    ## "pod-name" with the value "backend"
    pod-name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  ## Tells we are going to spawn 3 pods for this deployment
  replicas: 3
  ## Defines how the deployment will know which pods to manage
  ## in our case, all pods with the label "pod-name"
  ## with value "backend"
  selector:
    matchLabels:
      pod-name: backend
  template:
    metadata:
      labels:
        ## Defines the labels of the pods that this
        ## deployment will create
        pod-name: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: rg.fr-par.scw.cloud/vinyl-catalog-registry/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
